# internal/controller/restapi/v1/admin/router.go
@@ -61,6 +61,7 @@ func NewRoutes(apiV1 fiber.Router, users usecase.User, languages usecase.Languag
 	captionRoutes.Post("/import", ctrl.importCaptions)
 	captionRoutes.Get("/youtube-tracks", ctrl.listYouTubeSubtitleTracks)
 	captionRoutes.Post("/import-youtube", ctrl.importYouTubeCaptions)
+	captionRoutes.Post("/translate", ctrl.translateCaptions)
 	captionRoutes.Post("/", ctrl.createCaption)
 	captionRoutes.Put("/:captionId", ctrl.updateCaption)
 	captionRoutes.Delete("/:captionId", ctrl.deleteCaption)
